# super-development-platform

./: .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yaml
.github/workflows/: main.yaml  tags.yaml  test.yaml
rest_api/: main.py  pyproject.toml
rest_api/api/: databases.py  routers.py
rest_api/tests/: conftest.py  test_main.py
terraform/: .terraform.lock.hcl  eks.tf  locals.tf  vpc.tf
