[tool.poetry]
name = "rest-api"
version = "0.1.0"
description = "A REST API built on top of Python, FastAPI and CouchDB"
authors = ["garibaldiviolin"]

[tool.poetry.dependencies]
python = "^3.11.4"
uvicorn = "^0.23.2"
fastapi = "^0.104.1"
python-decouple = "^3.8"
aiocouch = "^3.0.0"
python-jose = "^3.3.0"
passlib = "^1.7.4"
python-multipart = "^0.0.6"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
httpx = "^0.25.2"
pytest-env = "^1.1.3"
pytest-randomly = "^3.15.0"
pytest-cov = "^4.1.0"
pre-commit = "^3.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
